<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.oop.lab3.MainActivity"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:gravity="center"
                                android:padding="8dp"
                                android:text="@string/raw_accelerometer"
                                android:textStyle="bold"
                                android:visibility="gone" />

                            <com.github.mikephil.charting.charts.LineChart
                                android:id="@+id/lc_acc"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:layout_weight="0"
                                android:visibility="gone"
                                tools:visibility="gone">

                            </com.github.mikephil.charting.charts.LineChart>


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:gravity="center"
                                android:padding="8dp"
                                android:text="@string/training"
                                android:textStyle="bold" />

                            <com.github.mikephil.charting.charts.LineChart
                                android:id="@+id/lc_train"
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:layout_weight="0">

                            </com.github.mikephil.charting.charts.LineChart>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:gravity="center"
                                android:padding="8dp"
                                android:text="@string/recognition"
                                android:textStyle="bold" />

                            <com.github.mikephil.charting.charts.LineChart
                                android:id="@+id/lc_recognize"
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:layout_weight="0">

                            </com.github.mikephil.charting.charts.LineChart>

                            <View
                                android:id="@+id/divider"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:layout_weight="0"
                                android:background="?android:attr/listDivider" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:text="@string/result"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/result"
                                    android:layout_width="120dp"
                                    android:layout_height="wrap_content" />

                                <TableLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp">

                                    <TableRow
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="0"
                                            android:text="@string/x"
                                            android:textStyle="bold" />

                                        <TextView
                                            android:id="@+id/xDTW"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content" />
                                    </TableRow>

                                    <TableRow
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="0"
                                            android:text="@string/y"
                                            android:textStyle="bold" />

                                        <TextView
                                            android:id="@+id/yDTW"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content" />
                                    </TableRow>

                                    <TableRow
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="0"
                                            android:text="@string/z"
                                            android:textStyle="bold" />

                                        <TextView
                                            android:id="@+id/zDTW"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content" />
                                    </TableRow>

                                </TableLayout>
                            </LinearLayout>

                            <RelativeLayout
                                android:id="@+id/rl_feedback"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorTransparent"
                                android:visibility="visible">

                                <ImageView
                                    android:id="@+id/iv_feedback"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_centerInParent="true"
                                    android:visibility="gone" />

                            </RelativeLayout>

                        </LinearLayout>

                    </LinearLayout>
                </ScrollView>


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@color/colorMature"
                android:padding="8dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:baselineAligned="false"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:baselineAligned="false">

                            <TextView
                                android:id="@+id/tv_mode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mode_training"
                                android:textStyle="bold" />

                            <Switch
                                android:id="@+id/sw_mode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false"
                                android:paddingRight="0dp"
                                tools:ignore="UseSwitchCompatOrMaterialXml" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/start_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button" />

                        <TextView
                            android:id="@+id/tv_mode_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/mode_training_desc" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/rl_obscure"
            android:visibility="gone"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>